--- a/mcmeta/Cargo.toml
+++ b/mcmeta/Cargo.toml
@@ -6,8 +6,16 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = "0.5.17"
 clap = "4.0.18"
 config = "0.13.2"
+custom_error = "1.9.2"
 git2 = "0.15.0"
+hyper = "0.14.20"
 libmcmeta = { path = "../libmcmeta" }
+reqwest = { version = "0.11.12", features = ["json"] }
+serde = { version = "1.0.147", features = ["derive"] }
+serde_json = "1.0.87"
 tokio = { version = "1.21.2", features = ["full"] }
+tracing = "0.1.37"
+tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
