fix: json_error points at end, context needs to read backwards cleanup: don't serialise none feat: parallel fetch config
Signed-off-by: Rachel Powers <508861+Ryex@users.noreply.github.com>

--- a/config/settings.json
+++ b/config/settings.json
@@ -3,5 +3,8 @@
   "storage_format": {
     "type": "json",
     "meta_directory": "meta"
+  },
+  "metadata": {
+    "max_parallel_fetch_connections": 8
   }
 }
