--- a/libmcmeta/Cargo.toml
+++ b/libmcmeta/Cargo.toml
@@ -12,5 +12,6 @@ lazy_static = "1.4.0"
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0.87"
 serde_valid = "0.9.0"
+serde_with = "2.3.2"
 
 [features]
