--- a/libmcmeta/Cargo.toml
+++ b/libmcmeta/Cargo.toml
@@ -6,12 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = { version = "0.4.22", features = ["serde"] }
+chrono = { version = "0.4.24", features = ["serde"] }
 custom_error = "1.9.2"
 lazy_static = "1.4.0"
-serde = { version = "1.0.147", features = ["derive"] }
-serde_json = "1.0.87"
-serde_valid = "0.9.0"
+serde = { version = "1.0.160", features = ["derive"] }
+serde_json = "1.0.95"
+serde_valid = "0.15.0"
 serde_with = "2.3.2"
+tracing = "0.1.37"
 
 [features]
