better log configuration
Signed-off-by: Rachel Powers <508861+Ryex@users.noreply.github.com>

--- a/mcmeta/Cargo.toml
+++ b/mcmeta/Cargo.toml
@@ -21,4 +21,4 @@ serde_valid = "0.15.0"
 tokio = { version = "1.27.0", features = ["full"] }
 tracing = "0.1.37"
 tracing-appender = "0.2.2"
-tracing-subscriber = { version = "0.3.16" }
+tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
