feat: betterconfig - load from .env - load from configurable path
Signed-off-by: Rachel Powers <508861+Ryex@users.noreply.github.com>

--- a/mcmeta/.env.example
+++ b/mcmeta/.env.example
@@ -1,3 +1,11 @@
 MCMETA__BIND_ADDRESS=127.0.0.1:9988
+
 MCMETA__STORAGE_FORMAT__TYPE=json
 MCMETA__STORAGE_FORMAT__META_DIRECTORY=../meta
+
+MCMETA__METADATA__MAX_PARALLEL_FETCH_CONNECTIONS=8
+
+MCMETA__DEBUG_LOG__ENABLE=true
+MCMETA__DEBUG_LOG__PATH=./logs
+MCMETA__DEBUG_LOG__PREFIX=mcmeta.log
+MCMETA__DEBUG_LOG__LEVEL=DEBUG
