--- a/mcmeta/Cargo.toml
+++ b/mcmeta/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.70"
 argparse = "0.2.2"
 axum = "0.6.15"
 clap = "4.2.1"
 config = "0.13.3"
-custom_error = "1.9.2"
 dotenv = "0.15.0"
 futures = "0.3.28"
 git2 = "0.17.0"
@@ -21,6 +21,7 @@ serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.95"
 serde_valid = "0.15.0"
 serde_with = "2.3.2"
+thiserror = "1.0.40"
 tokio = { version = "1.27.0", features = ["full"] }
 tracing = "0.1.37"
 tracing-appender = "0.2.2"
