download mojang static archived versions.
Signed-off-by: Rachel Powers <508861+Ryex@users.noreply.github.com>

--- a/mcmeta/Cargo.toml
+++ b/mcmeta/Cargo.toml
@@ -21,8 +21,10 @@ serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.95"
 serde_valid = "0.15.0"
 serde_with = "2.3.2"
+tempdir = "0.3.7"
 thiserror = "1.0.40"
 tokio = { version = "1.27.0", features = ["full"] }
 tracing = "0.1.37"
 tracing-appender = "0.2.2"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
+zip = "0.6.4"
