--- a/libmcmeta/Cargo.toml
+++ b/libmcmeta/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 chrono = { version = "0.4.24", features = ["serde"] }
 custom_error = "1.9.2"
 lazy_static = "1.4.0"
+merge = "0.1.0"
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.95"
 serde_valid = "0.15.0"
