--- a/mcmeta/Cargo.toml
+++ b/mcmeta/Cargo.toml
@@ -16,6 +16,7 @@ futures = "0.3.28"
 git2 = "0.17.0"
 hyper = "0.14.25"
 libmcmeta = { path = "../libmcmeta" }
+regex = "1.7.3"
 reqwest = { version = "0.11.16", features = ["json"] }
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.95"
