--- a/libmcmeta/Cargo.toml
+++ b/libmcmeta/Cargo.toml
@@ -14,6 +14,7 @@ serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.95"
 serde_valid = "0.15.0"
 serde_with = "2.3.2"
+time = { version = "0.3.20", features = ["serde-human-readable"] }
 tracing = "0.1.37"
 
 [features]
