--- a/mcmeta/Cargo.toml
+++ b/mcmeta/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.70"
+anyhow = { version = "1.0.70", features = ["backtrace"] }
 argparse = "0.2.2"
 axum = "0.6.15"
 clap = "4.2.1"
@@ -28,6 +28,7 @@ sha1 = "0.10.5"
 sha2 = "0.10.6"
 tempdir = "0.3.7"
 thiserror = "1.0.40"
+time = "0.3.20"
 tokio = { version = "1.27.0", features = ["full"] }
 tracing = "0.1.37"
 tracing-appender = "0.2.2"
