--- a/libmcmeta/Cargo.toml
+++ b/libmcmeta/Cargo.toml
@@ -7,13 +7,13 @@ edition = "2021"
 
 [dependencies]
 chrono = { version = "0.4.24", features = ["serde"] }
-custom_error = "1.9.2"
 lazy_static = "1.4.0"
 merge = "0.1.0"
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.95"
 serde_valid = "0.15.0"
 serde_with = "2.3.2"
+thiserror = "1.0.40"
 time = { version = "0.3.20", features = ["serde-human-readable"] }
 tracing = "0.1.37"
 
